Troubleshooting projects where content is not aligned correctly.

--- a/frontend/styles/components/project.css
+++ b/frontend/styles/components/project.css
@@ -705,16 +705,16 @@
 
 @media screen and (max-width: 768px) {
     
-    .project_info_header_content {
+    .project_details_header_content {
         padding: 15px;
     }
 
 
-    .project_content_wrapper {
+    .project_details_content_wrapper {
         padding: 15px;
     }
 
-    .project_info_content {
+    .project_details_content {
         display: block;
         padding-block: 15px;
     }
@@ -730,7 +730,7 @@
         padding-left: 0;
     }
     
-    .project_info_features_wrapper {
+    .project_details_features_grid {
         display: block;
     }
 
